# mcp-framework-getting-started

./: README.md  main.py  pyproject.toml  server.py
.claude/: CLAUDE.md  settings.json
docs/: architecture.md
skills/code-review/: SKILL.md
skills/task-management/: SKILL.md
skills/task-management/references/: prioritisation-guide.md
tests/: test_server.py
tools/: task_tools.py
